inclusion de beneficiarios y familiares mediante dialogo, validaciones diversas y cambios en la gestion de ayudas

--- a/WebContent/views/desktop/gestion/ayudas/asignacionAyuda/AsignacionAyudaFormBasic.zul
+++ b/WebContent/views/desktop/gestion/ayudas/asignacionAyuda/AsignacionAyudaFormBasic.zul
@@ -4,7 +4,136 @@
 		<div class="row">
 			<div class="col s12">
 				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="titulo_solicitud" class="active">
+						Titulo Solicitud Ayuda:
+					</n:label>
+					<textbox id="titulo_solicitud" type="text"
+						value="@bind(vm.selectedObject.titulo)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
 				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="beneficiario_solicitud" class="active">
+						Nombre Beneficiario Solicitud Ayuda:
+					</n:label>
+					<textbox id="beneficiario_solicitud" type="text"
+						value="@bind(vm.selectedObject.fkBeneficiario.fkPersona.nombre)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="beneficiario2_solicitud" class="active">
+						Apellido Beneficiario Solicitud Ayuda:
+					</n:label>
+					<textbox id="beneficiario2_solicitud" type="text"
+						value="@bind(vm.selectedObject.fkBeneficiario.fkPersona.apellido)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="beneficiario3_solicitud" class="active">
+						Documento de Identificacion Beneficiario Solicitud Ayuda:
+					</n:label>
+					<textbox id="beneficiario3_solicitud" type="text"
+						value="@bind(vm.selectedObject.fkBeneficiario.fkPersona.identificacion)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="familiar_solicitud" class="active">
+						Nombre Familiar Solicitud Ayuda:
+					</n:label>
+					<textbox id="familiar_solicitud" type="text"
+						value="@bind(vm.selectedObject.fkBeneficiario.fkFamiliar.fkPersona.nombre)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="familiar2_solicitud" class="active">
+						Apellido Familiar Solicitud Ayuda:
+					</n:label>
+					<textbox id="familiar2_solicitud" type="text"
+						value="@bind(vm.selectedObject.fkBeneficiario.fkFamiliar.fkPersona.apellido)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="familiar3_solicitud" class="active">
+						Documento de Identificacion Familiar Solicitud Ayuda:
+					</n:label>
+					<textbox id="familiar3_solicitud" type="text"
+						value="@bind(vm.selectedObject.fkBeneficiario.fkFamiliar.fkPersona.identificacion)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="ayuda_solicitud" class="active">
+						Ayuda Solicitada:
+					</n:label>
+					<textbox id="ayuda_solicitud" type="text"
+						value="@bind(vm.selectedObject.fkAyuda.nombre)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="ayuda2_solicitud" class="active">
+						Urgencia Solicitud:
+					</n:label>
+					<textbox id="ayuda2_solicitud" type="text"
+						value="@bind(vm.selectedObject.urgenciaEnum)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="ayuda3_solicitud" class="active">
+						Estatus Solicitud:
+					</n:label>
+					<textbox id="ayuda3_solicitud" type="text"
+						value="@bind(vm.selectedObject.estatusSolicitudEnum)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
 				
 				<div class="row">
 
