--- a/WebContent/views/desktop/gestion/ayudas/egresoBeneficiario/selectBeneficiario.zul
+++ b/WebContent/views/desktop/gestion/ayudas/egresoBeneficiario/selectBeneficiario.zul
@@ -24,9 +24,8 @@
 							<listhead sizable="true">
 					
 
-							<listheader width="250px" label="Nombre de Solicitante" />
-							<listheader width="250px" label="Apellido de Solicitante" />
-							<listheader width="250px" label="Identificacion" />
+							<listheader width="100%" label="Nombre de Solicitante" />
+							<listheader width="100%" label="Identificacion" />
 							
 							
 
@@ -35,14 +34,13 @@
 							<template name="model">
 								<listitem>
 								
-								<listcell label="@load(each.fkPersona.nombre)" />
-								<listcell label="@load(each.fkPersona.apellido)" />
+								<listcell label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
 								<listcell label="@load(each.fkPersona.identificacion)" />
 									
 								</listitem>
 							</template>
 							<listfoot>
-								<listfooter id="listFoot" span="5"
+								<listfooter id="listFoot" span="2"
 									use="karen.core.listfoot.ListFoot">
 								</listfooter>
 							</listfoot>
