--- a/WebContent/views/desktop/gestion/ayudas/egresoFamiliar/selectFamiliar.zul
+++ b/WebContent/views/desktop/gestion/ayudas/egresoFamiliar/selectFamiliar.zul
@@ -24,7 +24,6 @@
 							<listhead sizable="true">
 					
 							<listheader width="250px" label="Nombre de Representante" />
-							<listheader width="250px" label="Apellido de Representante" />
 							<listheader width="250px" label="Identificacion" />
 							<listheader width="250px" label="Telefono" />
 							<listheader width="250px" label="Correo" />
@@ -34,8 +33,7 @@
 							<template name="model">
 								<listitem>
 								
-								<listcell label="@load(each.fkPersona.nombre)" />
-								<listcell label="@load(each.fkPersona.apellido)" />
+								<listcell label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
 								<listcell label="@load(each.fkPersona.identificacion)" />
 								<listcell label="@load(each.fkPersona.telefono1)" />
 								<listcell label="@load(each.fkPersona.correo)" />
