--- a/WebContent/views/desktop/gestion/ayudas/evaluacionSolicitud/SolicitudFormBasic.zul
+++ b/WebContent/views/desktop/gestion/ayudas/evaluacionSolicitud/SolicitudFormBasic.zul
@@ -5,15 +5,16 @@
 		
 		
 			<div class="col s12">
+				
 				<div class="row">
 
 					<div class="input-field col s12">
-						<n:label for="titulo_solicitud" class="active">
+					
+					<n:label for="beneficiario3" class="active">
 						Titulo Solicitud Ayuda:
 					</n:label>
-					<textbox id="titulo_solicitud" type="text"
-						value="@bind(vm.solicitudAyuda.titulo)" disabled="true">
-					</textbox>
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.titulo)"> </label>
+					
 					</div>
 
 				</div>
@@ -24,25 +25,13 @@
 						<n:label for="beneficiario_solicitud" class="active">
 						Nombre Beneficiario Solicitud Ayuda:
 					</n:label>
-					<textbox id="beneficiario_solicitud" type="text"
-						value="@bind(vm.solicitudAyuda.fkBeneficiario.fkPersona.nombre)" disabled="true">
-					</textbox>
+					
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.fkBeneficiario.fkPersona.nombre.concat(' ').concat(vm.estudioSocioEconomico.fkSolicitudAyuda.fkBeneficiario.fkPersona.apellido))"> </label>
+					
 					</div>
 
 				</div>
 				
-				<div class="row">
-
-					<div class="input-field col s12">
-						<n:label for="beneficiario2_solicitud" class="active">
-						Apellido Beneficiario Solicitud Ayuda:
-					</n:label>
-					<textbox id="beneficiario2_solicitud" type="text"
-						value="@bind(vm.solicitudAyuda.fkBeneficiario.fkPersona.apellido)" disabled="true">
-					</textbox>
-					</div>
-
-				</div>
 				
 				<div class="row">
 
@@ -50,9 +39,10 @@
 						<n:label for="beneficiario3_solicitud" class="active">
 						Documento de Identificacion Beneficiario Solicitud Ayuda:
 					</n:label>
-					<textbox id="beneficiario3_solicitud" type="text"
-						value="@bind(vm.solicitudAyuda.fkBeneficiario.fkPersona.identificacion)" disabled="true">
-					</textbox>
+					
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.fkBeneficiario.fkPersona.identificacion)"> </label>
+					
+					
 					</div>
 
 				</div>
@@ -62,37 +52,26 @@
 
 					<div class="input-field col s12">
 						<n:label for="familiar_solicitud" class="active">
-						Nombre Familiar Solicitud Ayuda:
+						Nombre Representante Solicitud Ayuda:
 					</n:label>
-					<textbox id="familiar_solicitud" type="text"
-						value="@bind(vm.solicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.nombre)" disabled="true">
-					</textbox>
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.nombre.concat(' ').concat(vm.estudioSocioEconomico.fkSolicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.apellido))"> </label>
+					
+					
 					</div>
 
 				</div>
 				
-				<div class="row">
-
-					<div class="input-field col s12">
-						<n:label for="familiar2_solicitud" class="active">
-						Apellido Familiar Solicitud Ayuda:
-					</n:label>
-					<textbox id="familiar2_solicitud" type="text"
-						value="@bind(vm.solicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.apellido)" disabled="true">
-					</textbox>
-					</div>
-
-				</div>
+				
 				
 				<div class="row">
 
 					<div class="input-field col s12">
 						<n:label for="familiar3_solicitud" class="active">
-						Documento de Identificacion Familiar Solicitud Ayuda:
+						Documento de Identificacion Representante Solicitud Ayuda:
 					</n:label>
-					<textbox id="familiar3_solicitud" type="text"
-						value="@bind(vm.solicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.identificacion)" disabled="true">
-					</textbox>
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.identificacion)"> </label>
+					
+					
 					</div>
 
 				</div>
@@ -103,9 +82,9 @@
 						<n:label for="ayuda_solicitud" class="active">
 						Ayuda Solicitada:
 					</n:label>
-					<textbox id="ayuda_solicitud" type="text"
-						value="@bind(vm.solicitudAyuda.fkAyuda.nombre)" disabled="true">
-					</textbox>
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.fkAyuda.nombre)"> </label>
+					
+					
 					</div>
 
 				</div>
@@ -116,9 +95,8 @@
 						<n:label for="ayuda2_solicitud" class="active">
 						Urgencia Solicitud:
 					</n:label>
-					<textbox id="ayuda2_solicitud" type="text"
-						value="@bind(vm.solicitudAyuda.urgenciaEnum)" disabled="true">
-					</textbox>
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.urgenciaEnum)"> </label>
+					
 					</div>
 
 				</div>
@@ -126,12 +104,11 @@
 				<div class="row">
 
 					<div class="input-field col s12">
-						<n:label for="ayuda3_solicitud" class="active">
-						Estatus Solicitud:
+						<n:label for="ayuda2_solicitud" class="active">
+						Observacion Solicitud:
 					</n:label>
-					<textbox id="ayuda3_solicitud" type="text"
-						value="@bind(vm.solicitudAyuda.estatusSolicitudEnum)" disabled="true">
-					</textbox>
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.observacion)"> </label>
+					
 					</div>
 
 				</div>
@@ -139,67 +116,71 @@
 				<div class="row">
 
 					<div class="input-field col s12">
-						<n:label for="evaluador_solicitud" class="active">
-						Nombre de Evaluador:
+					
+					<n:label for="beneficiario1" class="active">
+						Nombre Evaluador de Estudio Socio Economico:
 					</n:label>
-					<textbox id="evaluador_solicitud" type="text"
-						value="@bind(vm.estudioSocioEconomico.fkTrabajador.fkPersona.nombre)" disabled="true">
-					</textbox>
+					<label sclass="subtitulo-evento"
+						
+						value="@bind(vm.estudioSocioEconomico.fkTrabajador.fkPersona.nombre.concat(' ').concat(vm.estudioSocioEconomico.fkTrabajador.fkPersona.apellido))">
+					
+					</label>
+					
 					</div>
 
 				</div>
-				
 				<div class="row">
 
 					<div class="input-field col s12">
-						<n:label for="evaluador2_solicitud" class="active">
-						Apellido de Evaluador:
+					
+					<n:label for="beneficiario1" class="active">
+						Identificacion Evaluador de Estudio Socio Economico:
 					</n:label>
-					<textbox id="evaluador2_solicitud" type="text"
-						value="@bind(vm.estudioSocioEconomico.fkTrabajador.fkPersona.apellido)" disabled="true">
-					</textbox>
+					<label sclass="subtitulo-evento"
+						
+						value="@bind(vm.estudioSocioEconomico.fkTrabajador.fkPersona.identificacion)">
+					
+					</label>
+					
 					</div>
 
 				</div>
 				
-				<div class="row">
-
-					<div class="input-field col s12">
-						<n:label for="evaluador3_solicitud" class="active">
-						Identificacion de Evaluador:
-					</n:label>
-					<textbox id="evaluador3_solicitud" type="text"
-						value="@bind(vm.estudioSocioEconomico.fkTrabajador.fkPersona.identificacion)" disabled="true">
-					</textbox>
-					</div>
-
-				</div>
 				
 				<div class="row">
 
 					<div class="input-field col s12">
-						<n:label for="evaluador4_solicitud" class="active">
-						Fecha de Realizacion de Estudio Socio Economico:
-					</n:label>
-					<textbox id="evaluador4_solicitud" type="text"
-						value="@bind(vm.fechaEjecutada)" disabled="true">
-					</textbox>
-					</div>
-
-				</div>
-				
-				<div class="row">
-
-					<div class="input-field col s12">
-						<n:label for="evaluador5_solicitud" class="active">
+					
+					<n:label for="beneficiario1" class="active">
 						Resultado de Estudio Socio Economico:
 					</n:label>
-					<textbox id="evaluador5_solicitud" type="text"
-						value="@bind(vm.estudioSocioEconomico.resultado)" disabled="true">
-					</textbox>
+					<label sclass="subtitulo-evento"
+						
+						value="@bind(vm.estudioSocioEconomico.resultado)">
+					
+					</label>
+					
 					</div>
 
 				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+					
+					<n:label for="beneficiario1" class="active">
+						Fecha de Ejecucion de Estudio Socio Economico:
+					</n:label>
+					<label sclass="subtitulo-evento"
+						
+						value="@bind(vm.fechaEjecutada)">
+					
+					</label>
+					
+					</div>
+
+				</div>
+				
 			</div>
 			
 			
