--- a/WebContent/views/desktop/gestion/ayudas/evaluacionSolicitud/estudioRealizadoFormBasic.zul
+++ b/WebContent/views/desktop/gestion/ayudas/evaluacionSolicitud/estudioRealizadoFormBasic.zul
@@ -10,6 +10,148 @@
 				<div class="row">
 
 					<div class="input-field col s12">
+					
+					<n:label for="beneficiario3" class="active">
+						Titulo Solicitud Ayuda:
+					</n:label>
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.titulo)"> </label>
+					
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="beneficiario_solicitud" class="active">
+						Nombre Beneficiario Solicitud Ayuda:
+					</n:label>
+					
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.fkBeneficiario.fkPersona.nombre.concat(' ').concat(vm.estudioSocioEconomico.fkSolicitudAyuda.fkBeneficiario.fkPersona.apellido))"> </label>
+					
+					</div>
+
+				</div>
+				
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="beneficiario3_solicitud" class="active">
+						Documento de Identificacion Beneficiario Solicitud Ayuda:
+					</n:label>
+					
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.fkBeneficiario.fkPersona.identificacion)"> </label>
+					
+					
+					</div>
+
+				</div>
+				
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="familiar_solicitud" class="active">
+						Nombre Familiar Solicitud Ayuda:
+					</n:label>
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.nombre.concat(' ').concat(vm.estudioSocioEconomico.fkSolicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.apellido))"> </label>
+					
+					
+					</div>
+
+				</div>
+				
+				
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="familiar3_solicitud" class="active">
+						Documento de Identificacion Familiar Solicitud Ayuda:
+					</n:label>
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.identificacion)"> </label>
+					
+					
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="ayuda_solicitud" class="active">
+						Ayuda Solicitada:
+					</n:label>
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.fkAyuda.nombre)"> </label>
+					
+					
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="ayuda2_solicitud" class="active">
+						Urgencia Solicitud:
+					</n:label>
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.urgenciaEnum)"> </label>
+					
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="ayuda2_solicitud" class="active">
+						Observacion Solicitud:
+					</n:label>
+					<label sclass="subtitulo-evento" value="@bind(vm.estudioSocioEconomico.fkSolicitudAyuda.observacion)"> </label>
+					
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+					
+					<n:label for="beneficiario1" class="active">
+						Nombre Evaluador de Estudio Socio Economico:
+					</n:label>
+					<label sclass="subtitulo-evento"
+						
+						value="@bind(vm.estudioSocioEconomico.fkTrabajador.fkPersona.nombre.concat(' ').concat(vm.estudioSocioEconomico.fkTrabajador.fkPersona.apellido))">
+					
+					</label>
+					
+					</div>
+
+				</div>
+				<div class="row">
+
+					<div class="input-field col s12">
+					
+					<n:label for="beneficiario1" class="active">
+						Identificacion Evaluador de Estudio Socio Economico:
+					</n:label>
+					<label sclass="subtitulo-evento"
+						
+						value="@bind(vm.estudioSocioEconomico.fkTrabajador.fkPersona.identificacion)">
+					
+					</label>
+					
+					</div>
+
+				</div>
+				
+				<!-- atributos propios  -->
+				
+				<div class="row">
+
+					<div class="input-field col s12">
 						<n:label for="fecha"
 							class="active">
 							Fecha de Estudio Realizado:
